# employees-accounting

./: CMakeLists.txt  README.md  employees-accounting.pro
Employees Accounting/src/: Employees_accounting.pro  databasecreation.h  dialoginsertinfo.cpp  dialoginsertinfo.h  dialoginsertinfo.ui  dialogselectbackupversion.cpp  dialogselectbackupversion.h  dialogselectbackupversion.ui  dialogselectorg.cpp  dialogselectorg.h  dialogselectorg.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  tablecommands.h  tcpclient.cpp
Tcp Server/src/: TcpServer.cpp  TcpServer.h  TcpServer.pro  main.cpp
app/: CMakeLists.txt  app.pro
app/include/: dialogselectorg.h
app/src/: dialogselectorg.cpp  mainwindow.cpp  tablecommands.cpp  tcpclient.cpp
application/: Employees_accounting.pro
application/forms/: dialoginsertinfo.ui  mainwindow.ui
application/include/: databasecreation.h  dialoginsertinfo.h  dialogselectbackupversion.h  mainwindow.h  tcpclient.h  tcpdatatypes.h
application/resources/: resources.qrc
application/src/: dialoginsertinfo.cpp  dialogselectbackupversion.cpp  dialogselectorg.cpp  main.cpp  mainwindow.cpp  tablecommands.cpp  tcpclient.cpp
server/: CMakeLists.txt  TcpServer.pro  server.pro
server/include/: TcpServer.h
server/src/: TcpServer.cpp  main.cpp
